[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "census-viz"
version = "0.1.0"
description = "Visualization tool for US Census data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deltalake>=0.22.3",
    "polars>=1.18.0",
    "pydantic>=2.10.4",
    "httpx>=0.27.0",  # Modern async HTTP client
    "pydantic-settings>=2.1.0",  # Settings management
    "typer>=0.9.0",  # CLI framework
    "rich>=13.7.0",  # Terminal formatting
    "folium>=0.15.1",
    "branca>=0.7.1",
    "pandas~=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]
notebook = [
    "marimo>=0.10.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/census_viz"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[project.scripts]
census-collect = "census_viz.cli:app"
